# manim_pymunk

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
examples/: Car.py  CollisionDetection.py  ImgMobject_test.py  VDampedRotarySpring_test.py  VDampedSpring_test.py  VGearJoint_test.py  VGrooveJoint_test.py  VPinJoint_test.py  VPivotJoint_test.py  VRatchetJoint_test.py  VRotaryLimitJoint_test.py  VSimpleMotor_test.py  VSlideJoint_test.py
src/manim_pymunk/: Constraints.py  PymunkConfig.py  SpaceScene.py  __init__.py
src/manim_pymunk/constraints/: VDampedRotarySpring.py  VDampedSpring.py  VGearJoint.py  VGrooveJoint.py  VPinJoint.py  VPivotJoint.py  VRatchetJoint.py  VRotaryLimitJoint.py  VSimpleMotor.py  VSlideJoint.py  __init__.py  constraint.py
src/manim_pymunk/custom_mobjects/: __init__.py  gear.py  v_spring.py
src/manim_pymunk/space/: SpaceScene.py  VSpace.py  __init__.py  space_scene.py  v_space.py
src/manim_pymunk/types/: __init__.py  body_config.py  shape_config.py
src/manim_pymunk/utils/: __init__.py  img_tools.py  logger_tool.py  tools_func.py
src/manim_pymunk/utils/docbuild/: manim_directive.py
test/: ImgMobject_test.py  VDampedRotarySpring_test.py  VDampedSpring_test.py  VPinJoint_test.py  VPivotJoint_test.py  VRotaryLimitJoint_test.py  example.py  manim.cfg
