[project]
name = "manim-pymunk"
version = "0.1.0"
description = "A simple Pymunk Visualization Package"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pymunk>=6.0.0",
    "manim>=0.18.0",
    "matplotlib>=3.10.0"
]


[project.entry-points."manim.plugins"]
"manim_pymunk" = "manim_pymunk"


[tool.hatch.build.targets.wheel]
packages = ["src/manim_pymunk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
