[project]
name = "manim-pymunk"
version = "0.0.1"
description = "A simple Pymunk Visualization Package"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CoreKSets", email = "passlink.jack@gmail.com" }
]
dependencies = [
    "pymunk>=6.0.0",
    "manim>=0.18.0",
    "matplotlib>=3.10.0"
]


[project.entry-points."manim.plugins"]
"manim_pymunk" = "manim_pymunk"


[tool.hatch.build.targets.wheel]
packages = ["src/manim_pymunk"]
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "src/manim_pymunk/**/*.png",
    "src/manim_pymunk/**/*.jpg",
    "src/manim_pymunk/**/*.cfg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/HHP999/manim_pymunk"
Issues = "https://github.com/HHP999/manim_pymunk/issues"
Repository = "https://github.com/HHP999/manim_pymunk.git"
